Spacing fixes, cleaning code.

--- a/scss/_media-queries.scss
+++ b/scss/_media-queries.scss
@@ -17,7 +17,6 @@
     .sub-wrapper {
         max-width: 1140px;
     }
-
     #header { padding: 1em 2em; }
     .menu-skip { display: none; }
     .access, .sf-menu { display: block; }
@@ -61,7 +60,6 @@
             }
         }
     }
-    #comments { font-size: 90%; }
     #footer nav { display: none; }
     #subsidiary {
         width: auto;
