--- a/style.css
+++ b/style.css
@@ -1198,10 +1198,6 @@ img#wpstats {
     opacity: 1.0;
   }
 
-  #comments {
-    font-size: 90%;
-  }
-
   #footer nav {
     display: none;
   }
